# RoboticsLab-6DOF

./: README.md  test.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/conveyorbelt_msgs/share/conveyorbelt_msgs/: package.sh  (+1 more)
log/: latest_build  latest_mixin
src/conveyorbelt_gazebo/launch/: ur5_moveit_planning_execution.launch.py
src/conveyorbelt_gazebo/python/: SpawnObject.py
src/conveyorbelt_gazebo/worlds/: conveyer_aruco_box.world
src/ros2_conveyorbelt/python/: SpawnObject.py
src/ur5/: CMakeLists.txt  Imp_commands.txt  setup.py
src/ur5/config/: ur5_control.yaml
src/ur5/launch/: ur5_control.launch.py  ur5_world.launch.py
src/ur5/meshes/: base_link.stl  shoulder_link.stl
src/ur5/models/box2_1/: model.config  model.sdf
src/ur5/models/box2_2/: model.config  model.sdf
src/ur5/models/box2_3/: model.config  model.sdf
src/ur5/models/conveyor_belt/: model.sdf
src/ur5/models/the_cube/: model.config  model.sdf
src/ur5/models/the_cube/materials/scripts/: aruco_1.material
src/ur5/models/the_cube_1/: model.config  model.sdf
src/ur5/models/the_cube_1/materials/scripts/: aruco0.material
src/ur5/models/the_cube_2/: model.config  model.sdf
src/ur5/models/the_cube_2/materials/scripts/: aruco2.material
src/ur5/models/the_cube_3/: model.config  model.sdf
src/ur5/models/the_cube_3/materials/scripts/: aruco5.material
src/ur5/models/warehouse/: model.config  model.sdf
src/ur5/moveit/config/: moveit_controllers.yaml  ur5.urdf.xacro
src/ur5/src/: motion_plan.cpp
src/ur5/ur5/: capture_image.py  controller_ik.py  motion_plan.cpp  moveit2_control.py  proximity.py  spawn_box_scheduler.py  tmp.py
src/ur5/urdf/: ur5_bot.urdf  ur5_rviz_bot.urdf
src/ur5/worlds/: ur5_conveyor.world  world1.world  world_final.world
(+53 files in other folders)
